added changes to the index file, config file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
 			<div class="container">
 				<div class="company-name"><a href="{{ site.baseurl }}/">{% include logo.html %} <span>{{ site.title }}</span></a></div>
 				{% include navigation.html %}
+			<div class="company-name"><span>Special Offer! Get your personality Wishing-site @ Rs.80.</span><a href="{{ site.demo }}/">Click Here for Demo! </a></div>
 			</div>
 
 			<section class="hero">
